Fix CORS configuration para permitir frontend en producción